# haskell-elm-architecture

./: README.md  elm-architecture.cabal  tea.cabal
app/: Main.hs
src/: Program.hs  TEA.hs
