name:                elm-architecture
version:             0.1.0.0
synopsis:            A Basic Model Update View mimicking Elm
homepage:            https://github.com/andrewMacMurray/haskell-elm-architecture#readme
license:             MIT
license-file:        LICENSE
author:              Andrew MacMurray
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tea
  hs-source-dirs:      src
  main-is:             TEA.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , transformers
                     , text
                     , directory
