name:                tea
version:             0.1.0.0
synopsis:            A Basic Model Update View mimicking Elm
homepage:            https://github.com/andrewMacMurray/haskell-elm-architecture#readme
license:             MIT
license-file:        LICENSE
author:              Andrew MacMurray
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Program
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , containers

executable tea
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tea
                     , directory
